Bug 232072 - iPod database is not updated after copying tracks from Amarok file browser
Summary: iPod database is not updated after copying tracks from Amarok file browser
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/iPod iPhone (other bugs)
Version First Reported In: 2.4-GIT
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
: 272804 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-03-25 05:40 UTC by James Dent
Modified: 2011-12-20 12:09 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments
0001-media-device-collection-more-consistent-handling-of-.patch (13.29 KB, patch)
2011-12-10 22:26 UTC, Matěj Laitl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description James Dent 2010-03-25 05:40:27 UTC
Version:           2.3.0 (using 4.4.1 (KDE 4.4.1), Arch Linux)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.32-ARCH

When plug in my iPod (nano, 3G), I attempt to use the filesystem browser (in the "Media Sources" panel) to copy tracks to it from my hard drive. The songs in my collection are FLAC files, so I select equivalent MP3 files that I have converted previously. These do not belong to my collection, in order to avoid duplicates.

When I select "Copy to Collection > iPod", the tracks are indeed copied to the iPod: however, all the ID3 tag information of the copies is lost (as well as the song length -- not sure whether that falls under the same category), rendering the iPod collection unmanageable.

I am using Amarok 2.3.0.
Comment 1 Timothy Lanzi 2011-01-03 23:42:29 UTC
Amarok 2.4-GIT, kubuntu 10.10.iPod Nano 3G. Repeated Mr. Dent's actions with similar results. Disagree with diagnosis. Tracks properly copied to device, however, cannot see the tracks through the iPod UI in *Song List*. Do see copied songs in *Movie List* When I plug my iPod back into Amarok the tracks can be seen and all tags are present. The track count on iPod is incorrect as it's not seeing the track copied off Amarok in song list. Is it possible that Amarok is not updating the on-device song list/database?    Ipod Nano 2G. Repeated Mr. Dent's actions with no issues. Song properly copied. Tags still present. Song visible in both iPod song UI and Amarok UI.
Comment 2 Myriam Schweingruber 2011-01-04 16:25:02 UTC
Thank you for testing.
Comment 3 Myriam Schweingruber 2011-05-10 03:04:09 UTC
*** Bug 272804 has been marked as a duplicate of this bug. ***
Comment 4 Edney Matias 2011-05-10 03:35:36 UTC
Can help testing, i have an iPod Shuffle 2nd generation.

Thanks.
Comment 5 Matěj Laitl 2011-10-20 12:59:42 UTC
I will look at this guys, please be patient until I find time to do so.
Comment 6 Matěj Laitl 2011-12-10 22:26:08 UTC
Created attachment 66605 [details]
0001-media-device-collection-more-consistent-handling-of-.patch

Reporters, please try this patch (shloud apply on top of 2.5 beta or 2.5 final) and report back whether it worked. This is rather bigger change, so it may not make it into 2.5, but let's see.
Comment 7 Matěj Laitl 2011-12-10 23:48:52 UTC
Also, if the songs you tranfer to iPod end up in Videos on iPod, you may be hitting bug 268238. (relates to .m4a files)
Comment 8 Matěj Laitl 2011-12-20 12:09:13 UTC
Git commit a8f1da1af7f3c3e2c2f99141ddb15e9dfa203932 by Matěj Laitl.
Committed on 10/12/2011 at 15:27.
Pushed by laitl into branch 'strohel-for-2.6'.

media device collection: more consistent handling of compilations

This makes handling of compilation albums consistent across:
 * Amarok collection
 * iPod viewed in Amarok
 * iPod viewed on itself

The code used to determine best guess album artist in
ScanResultProcessor was factored into ArtistHelper for reusability,
ArtistHelper is now exported in amaroklib.

This should definitely fix bug 232072. (or better - I'm not able to
reproduce it with this patch applied)

BUG: 232072
FIXED-IN: 2.6
DIGEST: compilation handling on iPod improved

M  +1    -0    ChangeLog
M  +1    -0    src/CMakeLists.txt
M  +3    -19   src/core-impl/collections/db/ScanResultProcessor.cpp
M  +0    -1    src/core-impl/collections/db/sql/CMakeLists.txt
M  +57   -31   src/core-impl/collections/mediadevicecollection/handler/MediaDeviceHandler.cpp
M  +1    -1    src/core-impl/collections/mediadevicecollection/handler/MediaDeviceHandler.h
M  +26   -0    src/core-impl/collections/support/ArtistHelper.cpp
M  +13   -1    src/core-impl/collections/support/ArtistHelper.h

http://commits.kde.org/amarok/a8f1da1af7f3c3e2c2f99141ddb15e9dfa203932